<resources>
    <string name="app_name">Lista zakupów</string>
    <string name="action_settings">Settings</string>
    <string name="shoppingList">Nowa lista zakupów</string>
    <string name="options">Ustawienia</string>
    <string name="title_activity_product_list">Twoja lista zakupów</string>
    <string name="title_activity_options">Ustawienia</string>
    <string name="title_activity_product_add">Produkt</string>
    <string name="name">Nazwa produktu</string>
    <string name="price">Cena</string>
    <string name="quantity">Ilość/Liczba</string>
    <string name="bought">Kupione:</string>
    <string name="deleteBtn">Usuń produkt</string>
    <string name="addBtn">Dodaj produkt</string>
</resources>
