<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProductAddActivity"
    tools:showIn="@layout/activity_product_add">

    <EditText
        android:id="@+id/add_name"
        android:hint="@string/name"
        android:inputType="textAutoCorrect"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/add_price"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/add_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/add_quantity"
        android:hint="@string/quantity"
        android:inputType="numberSigned"
        app:layout_constraintTop_toBottomOf="@id/add_price"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:importantForAutofill="no"/>

    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/add_quantity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/bought" />

        <CheckBox
            android:id="@+id/edit_bought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/deleteBtn"
        android:text="@string/deleteBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />


    <Button
        android:id="@+id/addBtn"
        android:text="@string/addBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</android.support.constraint.ConstraintLayout>